--- a/templates/conference/show.html.twig
+++ b/templates/conference/show.html.twig
@@ -24,4 +24,6 @@
     {% else %}
         <div>No comments have been posted yet for ths conference</div>
     {% endif %}
+    <h2>Add your own feedback</h2>
+    {{ form(comment_form) }}
 {% endblock %}
